--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                                 </a>
                             </li>
                             <li class="btn btn-link">
-                                <a href="https://vikramchavan888.github.io/Education/" class="btn-click magnetic" data-strength="24" data-strength-text="12">
+                                <a href="EDUCATION.html" class="btn-click magnetic" data-strength="24" data-strength-text="12">
                                 <span class="btn-text">
                                     <span class="btn-text-inner">Education</span>
                                 </span>
                                 </a>
                             </li>
                             <li class="btn btn-link">
-                                <a href="https://vikramchavan888.github.io/Aboutme.com/" class="btn-click magnetic" data-strength="24" data-strength-text="12">
+                                <a href="ABOUT.html" class="btn-click magnetic" data-strength="24" data-strength-text="12">
                                 <span class="btn-text">
                                     <span class="btn-text-inner">About</span>
                                 </span>
@@ -216,14 +216,14 @@
     </div>
     <ul class="links-wrap">
         <li class="btn btn-link">
-            <a href="https://vikramchavan888.github.io/Education/" class="btn-click magnetic" data-strength="20" data-strength-text="10">
+            <a href="EDUCATION.html" class="btn-click magnetic" data-strength="20" data-strength-text="10">
             <span class="btn-text">
                 <span class="btn-text-inner">Education</span>
             </span>
             </a>
         </li>
         <li class="btn btn-link">
-            <a href="https://vikramchavan888.github.io/Aboutme.com/" class="btn-click magnetic" data-strength="20" data-strength-text="10">
+            <a href="ABOUT.html" class="btn-click magnetic" data-strength="20" data-strength-text="10">
             <span class="btn-text">
                 <span class="btn-text-inner">About</span>
             </span>
@@ -285,7 +285,7 @@
                <p>The combination of my passion for design, code & interaction positions me in a unique place in the web design world.</p>
             </div>
             <div class="btn btn-round" data-scroll data-scroll-speed="2">
-               <a href="https://vikramchavan888.github.io/Aboutme.com/" class="btn-click magnetic " data-strength="100" data-strength-text="50">
+               <a href="ABOUT.html" class="btn-click magnetic " data-strength="100" data-strength-text="50">
                   <div class="btn-fill"></div>
                   <span class="btn-text">
                      <span class="btn-text-inner">About me</span>
@@ -306,7 +306,7 @@
       <ul class="work-items mouse-pos-list-image-wrap">
                      <li class="design development interaction visible">
             <div class="stripe animate"></div>
-            <a href="https://vikramchavan888.github.io/persistent.com/" class="row">
+            <a href="PERSISTENT.html" class="row">
                <div class="flex-col">
                   <h4><span>Persistent SYS™</span></h4>
                </div>
@@ -317,7 +317,7 @@
          </li>
                      <li class="design development interaction visible">
             <div class="stripe animate"></div>
-            <a href="https://vikramchavan888.github.io/Aveston.com/" class="row">
+            <a href="AVESTON.html" class="row">
                <div class="flex-col">
                   <h4><span>Avestan</span></h4>
                </div>
@@ -357,7 +357,7 @@
       <ul>
                   <li class="design development interaction visible">
             <div class="single-tile-wrap">
-               <a href="https://vikramchavan888.github.io/persistent.com/" class="row">
+               <a href="PERSISTENT.html" class="row">
                   <div class="flex-col">
                      <div class="tile-image">
                         <div class="overlay overlay-image lazy"  ><img   style="background-color: #48494A; background-position: center center; background-repeat: no-repeat; background-size: cover;" src="Assets\Persistent.JPEG"/></div>                     </div>
@@ -377,7 +377,7 @@
          </li>
                   <li class="design development interaction visible">
             <div class="single-tile-wrap">
-               <a href="https://vikramchavan888.github.io/Aveston.com/" class="row">
+               <a href="AVESTON.html" class="row">
                   <div class="flex-col">
                      <div class="tile-image">
                         <div class="overlay overlay-image lazy" ><img  style="background-color: #101010; background-position: center center; background-repeat: no-repeat; background-size: cover;"  src="Assets\Aveston.JPEG"/></div>                     </div>
