--- a/ABOUT.html
+++ b/ABOUT.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Vikram Chouhan • Freelancer , Developer & Market Analyst</title>
+    <meta http-equiv="refresh" content="5">
     <meta name="description" content="It’s not a bug; it’s an ndocumented feature. ―Vikram Chouhan. Located in The Nagpur,Maharastra . Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Vikram Chouhan"/>
     <meta property="og:title" content="Vikram Chouhan • Freelancer , Developer & Market Analyst"/>
     <meta property="og:description" content="It’s not a bug; it’s an ndocumented feature. ―Vikram Chouhan. Located in The Nagpur,Maharastra . Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Vikram Chouhan"/>
