--- a/CHECKMARKS.html
+++ b/CHECKMARKS.html
@@ -17,7 +17,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>checkmarx</title>
-        
+        <meta http-equiv="refresh" content="5">
         <meta name="description" content="Checkmarx is the leading application security provider, offering the industry’s most comprehensive cloud-native platform, Checkmarx One™, and services.">
         <meta name="robots" content="index, follow">
         <meta property="og:url" content="index.html">
