--- a/PERSISTENT.html
+++ b/PERSISTENT.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, user-scalable=no"/>
         <title>Persistent system</title>
+        <meta http-equiv="refresh" content="5">
         <meta name="description" content="• Worked as Security Achitect with Appication Team in Checkmarks SAST
         • Use Generative Ai to identify and repond to threats and creat predictive models and generating attack simulation.
         • Use a natural language processing engine to analyze security logs and identify potential threats and Worked as Miner in Blochain project PolygonID.">
