--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Vikram Chavan </title>
+
+    <meta http-equiv="refresh" content="5">
     <meta name="description" content="It’s not a bug 🐞; it’s an ndocumented feature. ―Vikram Chavan. Located in The Nagpur,Maharastra . Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Vikram Chavan"/>
     <meta property="og:title" content="Vikram Chouhan • Freelancer , Developer & Market Analyst"/>
     <meta property="og:description" content="It’s not a bug 🐞; it’s an ndocumented feature. ―Vikram Chavan. Located in The Nagpur,Maharastra . Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Vikram Chavan"/>
