--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <ul class="work-items mouse-pos-list-image-wrap">
                      <li class="design development interaction visible">
             <div class="stripe animate"></div>
-            <a href="PERSISTENT.html" class="row">
+            <a href="PERSISTENT.html" onClick="history.go(-1); return false;" class="row">
                <div class="flex-col">
                   <h4><span>Persistent SYS™</span></h4>
                </div>
